--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-        <!--
+    <!--
         changes in "header" class:
         1. <div class="header"> to <header class="header">
         2. <div> to <nav>
@@ -19,7 +19,7 @@
         -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav >
+        <nav>
             <ul class="links">
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -45,34 +45,40 @@
         4. ADD ALT ATTRIBUTES!!!
     -->
     <main class="content">
-        <figure class="content-figures" id="search-engine-optimization" >
+        <figure class="content-figures" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <figcaption class="caption">
-               <h2>Search Engine Optimization</h2>
-                <p>
-                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-                </p> 
-            </figcaption>
-            
+
+            <h2>Search Engine Optimization</h2>
+            <p>
+                The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
+            </p>
+
+
         </figure>
         <figure class="content-figures" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <figcaption class="caption">
-                <h2>Online Reputation Management</h2>
-                <p>
-                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-                </p>
-            </figcaption>
-            
+
+            <h2>Online Reputation Management</h2>
+            <p>
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                internet connection to say whatever they want about your business. Online Reputation Management
+                gives you the control over what potential customers see when they search for your business.
+            </p>
+
+
         </figure>
         <figure class="content-figures" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <figcaption class="caption">
-                <h2>Social Media Marketing</h2>
-                <p>
-                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-                </p>
-            </figcaption>
+
+            <h2>Social Media Marketing</h2>
+            <p>
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps
+                you determine which platforms are suited to your brand, using analytics to find the right markets
+                and increase your lead generation.
+            </p>
+
         </figure>
     </main>
 
@@ -82,26 +88,29 @@
         2. <div class=""> to <figure class="benefit">
         3. replaced class="" to id="";
     -->
-    <section class="benefits-block">
+    <section class="benefits">
         <figure id="benefit-lead" class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                Inbound strategies for lead generation require less work for your business, bringing customers directly
+                to your website.
             </p>
         </figure>
         <figure id="benefit-brand" class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.
             </p>
         </figure>
         <figure id="benefit-cost" class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                need to advertise your page.
             </p>
         </figure>
     </section>
@@ -112,9 +121,9 @@
     -->
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
+            <p>
+                &copy; 2019 Horiseon Social Solution Services, Inc.
+            </p>
     </footer>
 </body>
 
