--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         2. <div> to <nav>
         3. <ul> to <ul class="links">
         -->
-    <header class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul class="links">
