deleted main class

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         3. added id="search-engine-optimization"
         4. ADD ALT ATTRIBUTES!!!
     -->
-    <main class="content">
+    <main>
         <figure class="content-figures" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
 
