switched figure to section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         4. ADD ALT ATTRIBUTES!!!
     -->
     <main>
-        <figure class="content-figures" id="search-engine-optimization">
+        <section class="content-figures" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
 
             <h2>Search Engine Optimization</h2>
@@ -56,7 +56,7 @@
             </p>
 
 
-        </figure>
+        </section>
         <figure class="content-figures" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
 
