--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
                 travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                 your visibility and find the right customers for your business.
             </p>
-
-
         </section>
-        <figure class="content-figures" id="online-reputation-management">
+
+        <section class="content-figures" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
 
             <h2>Online Reputation Management</h2>
@@ -68,7 +67,7 @@
             </p>
 
 
-        </figure>
+        </section>
         <figure class="content-figures" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
 
