--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
         </section>
-        <figure class="content-figures" id="social-media-marketing">
+        <section class="content-figures" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
 
             <h2>Social Media Marketing</h2>
@@ -78,7 +78,7 @@
                 and increase your lead generation.
             </p>
 
-        </figure>
+        </section>
     </main>
 
     <!--
