deleted main section's id's because they are not used

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         4. ADD ALT ATTRIBUTES!!!
     -->
     <main>
-        <section class="content-figures" id="search-engine-optimization">
+        <section class="content-figures">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
 
             <h2>Search Engine Optimization</h2>
@@ -56,7 +56,7 @@
             </p>
         </section>
 
-        <section class="content-figures" id="online-reputation-management">
+        <section class="content-figures">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
 
             <h2>Online Reputation Management</h2>
@@ -68,9 +68,8 @@
 
 
         </section>
-        <section class="content-figures" id="social-media-marketing">
+        <section class="content-figures">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps
