--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
                 internet connection to say whatever they want about your business. Online Reputation Management
                 gives you the control over what potential customers see when they search for your business.
             </p>
-
-
         </section>
+
         <section class="content-figures">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -86,7 +85,7 @@
         2. <div class=""> to <figure class="benefit">
         3. replaced class="" to id="";
     -->
-    <section class="benefits">
+    <aside class="benefits">
         <figure id="benefit-lead" class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -111,7 +110,7 @@
                 need to advertise your page.
             </p>
         </figure>
-    </section>
+    </aside>
 
     <!--
         changes in the "footeer" class:
