--- a/index.html
+++ b/index.html
@@ -86,30 +86,30 @@
         3. replaced class="" to id="";
     -->
     <aside class="benefits">
-        <figure id="benefit-lead" class="benefit">
+        <div id="benefit-lead" class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
             </p>
-        </figure>
-        <figure id="benefit-brand" class="benefit">
+        </div>
+        <div id="benefit-brand" class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
             </p>
-        </figure>
-        <figure id="benefit-cost" class="benefit">
+        </div>
+        <div id="benefit-cost" class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
             </p>
-        </figure>
+        </div>
     </aside>
 
     <!--
