--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         changes in the "footeer" class:
         1. <div class="footer"> to <footer class="footer">
     -->
-    <footer class="footer">
+    <footer>
         <h4>Made with ❤️️ by Horiseon</h2>
             <p>
                 &copy; 2019 Horiseon Social Solution Services, Inc.
