<div> to <section class=content-figures>

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 
 <body>
     <!--
-        changes in "header" class:
+        changes in "header":
         1. <div class="header"> to <header class="header">
         2. <div> to <nav>
-        3. <ul> to <ul class="links">
         -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -39,8 +38,8 @@
     <figure class="hero"></figure>
     <!--
         changes in the "content" class:
-        1. <div class="content"> to <main class="content">
-        2. <div> to <figure class="content-figures">
+        1. <div class="content"> to <main>
+        2. <div> to <section class="content-figures">
         3. added id="search-engine-optimization"
         4. ADD ALT ATTRIBUTES!!!
     -->
