--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <!--
         changes in the "benefits" class:
-        1. <div class="benefits"> to <section class="benefits-block">
+        1. <div class="benefits"> to <aside class="benefits">
         2. <div class=""> to <figure class="benefit">
         3. replaced class="" to id="";
     -->
