<div> to <section class=benefit>

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!--
         changes in the "benefits" class:
         1. <div class="benefits"> to <aside class="benefits">
-        2. <div class=""> to <figure class="benefit">
+        2. <div class=""> to <section class="benefit">
         3. replaced class="" to id="";
     -->
     <aside class="benefits">
