added alt attribute to SEO img

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     -->
     <main>
         <section class="content-figures">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="work office deskn, and a notebook with 'SEO' written" class="float-left" />
 
             <h2>Search Engine Optimization</h2>
             <p>
