added alt attr to online reputation management img

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
 
         <section class="content-figures">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="man on a laptop with 'REPUTATION' on the screen" class="float-right" />
 
             <h2>Online Reputation Management</h2>
             <p>
