added alt attr to social media marketing img

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section>
 
         <section class="content-figures">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="group table talking about social media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps
