revised comments in files

--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
         changes in the "benefits" class:
         1. <div class="benefits"> to <aside class="benefits">
         2. <div class=""> to <section class="benefit">
+        3. <aside class="benefits"> to <aside>
     -->
-    <aside class="benefits">
+    <aside>
         <div id="benefit-lead" class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -112,7 +113,7 @@
 
     <!--
         changes in the "footeer" class:
-        1. <div class="footer"> to <footer class="footer">
+        1. <div class="footer"> to <footer>
     -->
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
