added title to webpage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--
         ADD TITLE!!!
     -->
-    <title>website</title>
+    <title>Essential Guide to Digital Marketing: SEO, Social Media, and Reputation Management</title>
 </head>
 
 <body>
