--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         3. <aside class="benefits"> to <aside>
     -->
     <aside>
-        <div id="benefit-lead" class="benefit">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
@@ -93,7 +93,7 @@
                 to your website.
             </p>
         </div>
-        <div id="benefit-brand" class="benefit">
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
@@ -101,7 +101,7 @@
                 for your business.
             </p>
         </div>
-        <div id="benefit-cost" class="benefit">
+        <div class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
