--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
         changes in the "benefits" class:
         1. <div class="benefits"> to <aside class="benefits">
         2. <div class=""> to <section class="benefit">
-        3. <aside class="benefits"> to <aside>
+        3.   to <aside>
     -->
     <aside>
         <div class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="image representing 'lead generation'"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -95,7 +95,7 @@
         </div>
         <div class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="image representing 'brand Awareness' "/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -103,7 +103,7 @@
         </div>
         <div class="benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png"  alt="image representing 'cost management'"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
